# ePaper

./: .gitmodules  AGENTS.md  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
components/gmf_core/: .component_hash  CHANGELOG.md  CHECKSUMS.json  idf_component.yml
components/gmf_core/data_bus/: esp_gmf_pbuf.c
components/gmf_core/helpers/include/: esp_fourcc.h
components/gmf_core/include/: esp_gmf_pipeline.h
components/gmf_core/src/: esp_gmf_pipeline.c
components/gmf_core/test_apps/main/cases/: gmf_pbuf_test.c  gmf_pipeline_test.c
main/: CMakeLists.txt  main.cpp
main/bsp/: board_audio.cpp  board_power.cpp  board_rtc.cpp  bsp.cpp
main/bsp/audio/: audio_bsp.c  audio_bsp.h
main/bsp/include/: board_audio.h  board_power.h  board_rtc.h  bsp.h  hwdef.h
main/driver/: board_codec.cpp  epaper.cpp  lvgl_display.cpp  multi_button.cpp  shtc3.cpp  vbat_adc.cpp
main/driver/include/: board_codec.h  epaper.h  lvgl_display.h  multi_button.h  shtc3.h  vbat_adc.h
main/monitor/: button_handler.cpp  button_monitor.cpp  led_heartbeat.cpp  music_player.cpp  time_sync.cpp
main/monitor/include/: button_handler.h  led_heartbeat.h  music_player.h  time_sync.h
main/storage/: music.pcm
main/ui/: dashboard_model.cpp  dashboard_page.cpp  dashboard_widget.cpp  gui.cpp  icon.cpp
main/ui/include/: dashboard_model.h  dashboard_page.h  dashboard_widget.h  epaper_icon.h  gui.h
